# cowlang

./: .gitignore  .travis.yml  Cargo.toml  README.md
.github/workflows/: ci.yml
ci/: clippy.sh
cowlang-derive/: Cargo.toml
cowlang-derive/src/: lib.rs
cowlang-derive/tests/: main.rs
src/: error.rs  lib.rs  values.rs
src/ast/: mod.rs
src/compiler/: ast.rs  lexer.rs  mod.rs  parser.rs
src/interpreter/: mod.rs  module.rs  scopes.rs
src/parser/: mod.rs
src/test/: basic.rs  list.rs  map.rs  mod.rs  modules.rs
src/values/: error.rs  mod.rs
tests/: arrays.rs  basic.rs  list.rs  map.rs  mod.rs  modules.rs
