[package]
name = "cowlang"
version = "0.1.0"
authors = ["Kai Mast <kaimast@cs.cornell.edu>"]
edition = "2021"

[dependencies]
bincode = { version="1.2" }
serde = { version="1.0", features=["derive"] }
serde_bytes = "0.11"
plex = { git="https://github.com/kaimast/plex.git", optional=true }
digest = { version="0.9", optional=true }
byte-slice-cast = { version="0.3", optional=true }
pyo3 = { version="0.23", optional=true }

[features]
default = ["compiler", "interpreter"]
verbose = []
python-bindings = ["dep:pyo3"]
compiler = ["dep:plex"]
interpreter = []
hash = ["dep:digest", "dep:byte-slice-cast"]
