[package]
name = "cowlang"
version = "0.1.0"
authors = ["Kai Mast <kai@kaimast.com>"]
edition = "2021"
description = "A simple Python-like scripting language"
license-file = "LICENSE"

[dependencies]
bincode = { version="1.2" }
serde = { version="1.0", features=["derive"] }
serde_bytes = "0.11"
plex = { version="0.3", optional=true }
digest = { version="0.10", optional=true }
byte-slice-cast = { version="1", optional=true }
pyo3 = { version="0.23", optional=true }

[features]
default = ["compiler", "interpreter"]
all = ["default", "python-bindings"]
verbose = []
python-bindings = ["dep:pyo3"]
compiler = ["dep:plex"]
interpreter = []
hash = ["dep:digest", "dep:byte-slice-cast"]
