[package]
name = "cowlang-derive"
version = "0.1.0"
authors = ["Kai Mast <kai@kaimast.com>"]
edition = "2021"
description = "A simple Python-like scripting language: Macros"
license-file = "../LICENSE"

[dependencies]
syn = { version="2", features=["full", "extra-traits"] }
quote = "1"

[dev-dependencies]
cowlang = { path=".." }

[lib]
proc-macro = true
